--- a/airline/src/css/AddMeals.css
+++ b/airline/src/css/AddMeals.css
@@ -193,3 +193,76 @@
     background: #e84545;
   }
    
+  .selected-meals {
+    background-color: #f5f5f5;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .selected-meals h3 {
+    margin-bottom: 15px;
+  }
+  
+  .selected-meals ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .selected-meals li {
+    margin: 5px 0;
+  }
+  
+  .total-bill {
+    margin-top: 15px;
+    font-weight: bold;
+    font-size: 18px;
+  }
+  .quantity-selector {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .quantity-selector button {
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin: 0 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .quantity-selector button:hover {
+    background-color: #000000;
+  }
+  
+  .quantity-selector span {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 10px;
+  }
+  
+  .done-button {
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    font-size: 16px;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .done-button:hover {
+    background-color: #000000;
+  }
+  
