--- a/airline/src/css/Blog.css
+++ b/airline/src/css/Blog.css
@@ -49,12 +49,13 @@
 }
 
 .card-content {
-  padding: 15px;
-  color: white;
+  padding: 10px;
+  color: rgb(255, 253, 253);
 }
 
 .card-content p {
   margin: 0;
+  color:white;
 }
 
 h4 {
