--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -844,6 +844,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    position: center;
     
 }
 
