--- a/airline/src/css/ModifyFlight.css
+++ b/airline/src/css/ModifyFlight.css
@@ -1,14 +1,9 @@
-
-h1 {
-    font-size: 24px;
-    font-weight: normal;
-    margin-bottom: 10px;
-}
-
-h1 .highlight {
+.heading {
+    font-size: 36px;
     font-weight: bold;
-}
-
+    color: black;
+    margin-bottom: 30px;
+  }
 h2 {
     font-size: 20px;
     margin-top: 20px;
