--- a/airline/src/css/Points.css
+++ b/airline/src/css/Points.css
@@ -5,7 +5,7 @@
     font-family: Arial, sans-serif;
 }
 
-.sidebar {
+.sidebars {
     width: 250px;
     background-color: #333333; /* Black background for sidebar */
     padding: 20px;
